AH-2003-01-24-0  Enhancem.  uti: use get/set functions for acessing 'me' struct members
                            uti: use get/set functions for localhost, fqdn_cmp, default_domain
                            uti: made hash module reentrant
                            partially made GDI reentrant 
                            made CULL reentrant 
                            made event_text() reentrant
                            ensure sge_gdi_setup() is called once
                            added MT support to RMON
                            renewed commlib MT support


CR-2003-01-24-1  Testsuite: bugfix: check issuezilla/126:
                                    - used global "host1" variable for getting
                                      hostname. This variable was initalized
                                      from migration and auto_reschedule test.
                                    - set load_thresholds and 
                                      suspend_thresholds for the test queues
                                      to a high value
                                    - renamed "host1" and "host2" variable 
                                      from migration and auto_reschedule test.

CR-2003-01-24-0  Testsuite: - bugfix: get_tmp_file_name() - it was possible
                                      to get the same filename when calling
                                      procedure one after onother.
                            - enhancm.: submit_job() - new parameter to
                                      disable output of job arguments
                            - new test: issue_440 
                 IZ:        #460

AA-2003-01-24-0  Bugfix:    qsub -C option analogue was missing in qmon
                            remove #$ in submit dialogue's Prefix field
                            to achieve same functionality as qsub -C before
                            loading job with the file dialogue
                 Review:    JG